# plotwidgets

./: .gitignore  .nojekyll  README.md  search.json  setup.cfg
api/: index.html  seaborn.html
conda-build/: meta.yaml
docs/: README.md  _quarto.yml  about.qmd  objects.json  objects.txt
docs/_inv/: griffe_objects.txt  python_objects.txt
docs/api/: _sidebar.yml  bar.baz.qmd  foo.qmd  index.qmd  seaborn.qmd
docs/examples/: example.ipynb  showcase.ipynb  widgets.ipynb
docs/pages/: examples.ipynb  getting_started.qmd  overview.qmd  seaborn.qmd
examples/: example.html  showcase.html  widgets.html
libraryname/: __init__.py
pages/: examples.html  getting_started.html  seaborn.html
plotwidgets/: __init__.py
