[metadata]
name = libraryname
version = 0.1.0
author = Your Name
author_email = your@email.com
description= Project description
url = https://github.com/munch-group/libraryname
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires=file: requirements.txt

[options.package_data]
libraryname =
    data/*.txt, data/*.csv, data/*.pickle

[options.entry_points]
console_scripts =
    hello = libraryname.bar:baz
